--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,11 +23,14 @@
 	--modal-confirm-bg: #F2F2F2;
 	--modal-confirm-button-bg: #C4C4C4;
 
-	/* 길이 */
+	/* 길이 - 모바일 */
 	--mobile-header-height: 200px;
-	--desktop-header-height: 125px;
-	--mobile-page-height: calc(100vh - 200px);
+	--mobile-menubar-height: 70px;
+	--mobile-page-height: calc(100vh - 200px - 70px);
+	
+	/* 길이 - 데스크탑*/
 	--desktop-page-height: calc(100vh - 125px);
+	--desktop-header-height: 125px;
 }
 
 /* 속성값 통일 */
