Design: 유효성 검사 텍스트

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,8 @@
 	--button-bg-normal: #DDD;
 	--button-bg-positive: #419300;
 	--button-bg-negative: #FF4545;
+	--font-validation-negative: #FF4545;
+	--font-validation-positive: #419300;
 	--button-bg-edit: #2F6ECB;
 	--button-bg-google: #EA4335;
 	--modal-bg-color: #00000066;
