--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,7 @@
 	--modal-confirm-button-bg: #C4C4C4;
 
 	/* 길이 - 모바일 */
-	--mobile-page-height: calc(100vh - 200px - 70px);
+	--mobile-page-height: calc(100vh - 200px);
 	--mobile-header-height: 200px;
 	--mobile-menubar-height: 70px;
 	
