Design: spinner - props로 size, duration 추가, 로딩페이지 구성

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,13 @@ button {
     cursor: pointer;
 }
 
+/* animation */
+@keyframes add-spin {
+	to {
+		transform: rotate(360deg);
+	}
+}
+
 /* [start] create-react-app default style */
 body {
     margin: 0;
