Design: 랜딩페이지 1/4에 효과 적용

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,33 @@ button {
 	}
 }
 
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes from-left-to-center {
+	from {
+		transform: translate(-100%);
+	}
+	to {
+		transform: translate(0%);
+	}
+}
+
+@keyframes from-right-to-center {
+	from {
+		transform: translate(100%);
+	}
+	to {
+		transform: translate(0%);
+	}
+}
+
 /* [start] create-react-app default style */
 body {
     margin: 0;
