client/pages레이아웃수정중

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
 
 :root {
     /* 색상 */
-    --page-bg-color: #fef9ef;
+    --page-bg-color: #FAFAFA;
     --mobile-header-color: #a2d2ff;
     --button-bg-normal: #ddd;
     --button-bg-positive: #b79ac1;
