Design: 비밀번호 유효성 검사 폰트 색상, 두께 변경

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,10 +14,10 @@
     --page-bg-color: #FAFAFA;
     --mobile-header-color: #a2d2ff;
     --button-bg-normal: #ddd;
-    --button-bg-positive: #b79ac1;
+    --button-bg-positive: #419300;
     --button-bg-negative: #ff4545;
-    --font-validation-negative: #ff4545;
-    --font-validation-positive: #419300;
+    --font-validation-negative: #e04f4f;
+    --font-validation-positive: #327552;
     --button-bg-edit: #2f6ecb;
     --button-bg-google: #ea4335;
     --modal-bg-color: #00000066;
