--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
 		스타일드 컴포넌트에서도 사용 가능합니다!
 	*/
 
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 :root {
     /* 색상 */
     --page-bg-color: #fafafa;
@@ -68,7 +68,7 @@ button {
 /* [start] create-react-app default style */
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    font-family: -apple-system, BlinkMacSystemFont, 'Gowun Dodum', "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
